# eigen.cmake

./: .editorconfig  .gitmoji-changelogrc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: gitmoji-changelog.yml  repo-diagram.yml  unit-tests.yml
cmake/: Version.cmake
examples/: CMakeLists.txt  eigen_example.cpp
examples/install/: CMakeLists.txt
